src/main/java/com/example/stream/spring/courses/reactive/example/model/error/UniversitySuccess.java
package com.example.stream.spring.courses.reactive.example.model.error;

public sealed interface UniversitySuccess extends Success permits UniversityDeleteOk {
}
